src/test/deca/codegen/valid/improvided/opArth4.deca
// Description:
// test d operation arithmétique
// Resultat:
// 38.0
{
  int x = 4;
  float y = x + 2;
  float m = y + x;
  float f = m*2 + 3*x + y;
  print(f);
}

//Resultat:38.0
